Correct styles for the index file because icons were overlap

--- a/static/css/style-hangman_bvg.css
+++ b/static/css/style-hangman_bvg.css
@@ -6,7 +6,7 @@
 body {
   background-color: #f0d722;
   padding: 3%;
-  overflow: scroll;
+  overflow-x: hidden;
   max-width: 100%;
 }
 
@@ -16,16 +16,17 @@ body {
 
 /* Styles for the Ubahn icons in the index file */
 .ubahn {
-width: 30%;
-height: 30%;
+width: 20%;
+height: 20%;
+border: white 0.1rem solid;
 border-radius: 25%;
 text-transform: uppercase;
 font-weight: bolder;
 text-decoration: none;
 color: #FFF;
 font-size: 6rem;
-margin: 20% !important;
-padding: 20% !important;
+margin: 3% !important;
+padding: 3% !important;
 }
 
 .u1 {
